# expensetracker

./: .gitignore  README.md  pyproject.toml
src/expense/: __init__.py  __main__.py  app.py  model.py
src/expense/auth/: __init__.py  blueprint.py  delete.py  login.py  logout.py  password.py  register.py
src/expense/static/: script.js  style.css
src/expense/templates/: base.html  macros.html
src/expense/templates/auth/: delete.html  login.html  register.html
src/expense/templates/tracker/: cat.html  category.html  create.html  details.html  index.html  trans.html
src/expense/tracker/: __init__.py  blueprint.py  cat.py  category.py  create.py  details.py  index.py  trans.py
src/expense/tracker/templates/: cat.html  category.html  trans.html
